# event-ticket-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  initial_data.sh  pyproject.toml
app/: .env.template  app.py  error_handler.py  loadenv.py
app/migrations/versions/: 7249af207641_create_reservations_table.py  dbe34ea2e679_create_events_table.py
app/models/: __init__.py  events.py  reservations.py
app/resources/: __init__.py  events.py  hello.py  reservations.py
app/schema/: events.py  reservations.py
